k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongodb
  template:
    metadata:
      labels:
        component: mongodb
    spec:
      containers:
        - name: mongodb-deployment
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-init
              mountPath: /etc/mongo-init
              readOnly: true
            - name: mongodb-scripts
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
#            - name: mongodb-conf
#              mountPath: /config
#              readOnly: true
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongo-init
          secret:
            secretName: mongo-config
            items:
              - key: MONGO_INITDB_ROOT_USERNAME
                path: MONGO_INITDB_ROOT_USERNAME
                mode: 0444
              - key: MONGO_INITDB_ROOT_PASSWORD
                path: MONGO_INITDB_ROOT_PASSWORD
                mode: 0444
              - key: MONGO_USERNAME
                path: MONGO_USERNAME
                mode: 0444
              - key: MONGO_PASSWORD
                path: MONGO_PASSWORD
                mode: 0444
              - key: MONGO_INITDB_DATABASE
                path: MONGO_INITDB_DATABASE
                mode: 0444
        - name: mongodb-scripts
          configMap:
            name: mongodb-config
            items:
              - key: mongo-init.js
                path: mongo-init.js
        - name: mongodb-conf
#          configMap:
#            name: mongodb-config
#            items:
#              - key: mongo.conf
#                path: mongo.conf
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-persistent-volume-claim
