k8s/mongodb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mongodb
  ports:
    #port in cluster
    - port: 27017
      # port to contact inside container
      targetPort: 27017
