k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # replaces ?(.*) capture group below
spec:
  rules:
    - http:
        paths:
          - path: /(api/.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5001
          - path: /?(.*) #uses the capture to rewrite with above rewrite target
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
